# franka_ws

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  franka_ws.repos
docker/: .dockerignore  Dockerfile  base.Dockerfile  dev.Dockerfile  docker-compose.yml  entrypoint.sh  franka.Dockerfile  libfranka.Dockerfile  ros2.Dockerfile  ubuntu.Dockerfile
scripts/: build.sh  init_franka_ws.sh  run_fake.sh  run_real.sh  setup_deps.sh
scripts/old/: run_fake.sh
src/MTC_handover/: CMakeLists.txt  package.xml
src/MTC_handover/launch/: mtc.launch.py
src/MTC_handover/src/: mtc.cpp
src/control/: package.xml  setup.py
src/control/config/: fr3_ros_controllers_position.yaml
src/control/control/: joint_state_echo.py  pose_goal.py
src/control/launch/: moveit_fake_position.launch.py
src/dual_arm/: CMakeLists.txt  package.xml
src/dual_arm/config/: dual_fr3.srdf.xacro  dual_fr3.urdf.xacro  dual_fr3_controllers.yaml  dual_kinematics.yaml  dual_ros2_controllers.yaml  fr3.urdf.xacro  franka_arm_dual.srdf.xacro  joint_limits.yaml
src/dual_arm/config/urdf (saved)/: dual_fr3.urdf.xacro
src/dual_arm/include/dual_arm/: dual_arm_task.hpp
src/dual_arm/launch/: moveit.launch.py  mtc_moveit.launch.py  refactor_moveit.launch.py
src/dual_arm/rviz/: moveit.rviz
src/dual_arm/src/: mtc_handover.cpp  mtc_handover_node.cpp
src/hello_moveit/: package.xml
src/hello_moveit/src/: hello_moveit.cpp
src/mtc_tutorial/: CMakeLists.txt  package.xml
src/mtc_tutorial/src/: mtc_tutorial.cpp
